--- a/css/styles.css
+++ b/css/styles.css
@@ -6,36 +6,77 @@ body {
 }
 
 .container {
-    max-width: 1158px;
-    padding: 0 15px;
+    max-width: 320px;
+    padding: 0 16px;
     margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
+
 h2 {
     margin-bottom: 72px;
 }
+
 p {
     margin: 0;
 }
+
 a {
     display: inline-block;
     text-decoration: none;
 }
+
 ul,
 ol {
     margin: 0;
     padding-left: 0;
     list-style-type: none;
 }
+
 img {
     display: block;
 }
 
 input {
     font-family: inherit;
+}
+
+.card-header {
+    font-weight: 500;
+    font-weight: 20px;
+    text-align: center;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+.card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.hide {
+    display: none;
 }
 
 /* #endregion */
@@ -52,26 +93,25 @@ header .container {
     align-items: center;
 }
 nav {
+    width: 100%;
     display: inline-flex;
     flex-direction: row;
-    align-items: center;
-}
-nav .navigation {
-    display: inline-flex;
-    flex-direction: row;
-    gap: 40px;
+    align-items: baseline;
+    justify-content: space-between;
 }
 
-address {
-    display: inline-flex;
-    flex-direction: row;
-    align-items: center;
+@media only screen and (min-width: 768px) {
+   nav {
+    max-width: 496px;
+  }
 }
-address .contacts {
-    display: inline-flex;
-    flex-direction: row;
-    gap: 40px;
+
+@media only screen and (min-width: 1158px) {
+   nav {
+    max-width: 452px;
+  }
 }
+
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -80,7 +120,10 @@ address .contacts {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 76px;
+}
+
+header .logo {
+    padding: 16px 0;
 }
 span {
     color: #2e2f42;
@@ -88,6 +131,33 @@ span {
 .logo-span {
     color: #f4f4fd;
 }
+.menu-btn {
+    border: none;
+    background-color: transparent;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+   .menu-btn {
+        display: none;
+  }
+}
+
+nav .navigation {
+    display: inline-flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+@media only screen and (max-width: 767px) {
+   nav .navigation {
+        display: none;
+  }
+}
+
+
 .nav-link {
     position: relative;
     display: block;
@@ -122,16 +192,44 @@ span {
 .nav-link:focus {
     color: #404bbf;
 }
-.contacts {
-    font-style: normal;
+
+address .contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
 }
+
+@media only screen and (min-width: 1158px) {
+    address .contacts {
+        flex-direction: row;
+        gap: 40px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    address .contacts {
+        display: none;
+    }
+}
+
 .contacts-link {
+    font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media only screen and (max-width: 1157px) {
+ .contacts-link{
+        font-size: 12px;
+        line-height: 1.16667;
+        letter-spacing: 0.04em;
+  }
+}
+
 .contacts-link:hover,
 .contacts-link:focus {
     color: #404bbf;
@@ -145,7 +243,7 @@ span {
     background-color: #2e2f42;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 188px 0;
+    padding: 72px 0;
     background-image: 
     linear-gradient(to bottom,
         rgba(46, 47, 66, 0.7),
@@ -155,9 +253,22 @@ span {
     background-position: 50% 50%;
     background-size: cover;
 }
+
+@media only screen and (min-width: 768px) {
+    .hero-image {
+    padding: 112px 0;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+    .hero-image {
+        padding: 188px 0;
+    }
+}
+
 .page-header {
     font-weight: 700;
-    font-size: 56px;
+    font-size: 36px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #fff;
@@ -165,9 +276,17 @@ span {
     margin-bottom: 48px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 496px;
+    max-width: 216px;
     
 }
+
+@media only screen and (min-width: 768px) {
+    .page-header {
+        font-size: 56px;
+        max-width: 496px;
+  }
+}
+
 .hero-image-button {
     display: block;
     font-family: "Roboto", sans-serif;
@@ -197,7 +316,13 @@ span {
 /* #region Benefits */
 
 .section-one {
+    padding: 96px 0;
+    
+}
+@media only screen and (min-width: 1158px) {
+   .section-one {
     padding: 120px 0;
+  }
 }
 .visually-hidden {
     position: absolute;
@@ -214,16 +339,42 @@ span {
 
 .section-one-list {
     display: flex;
-    flex-direction: row;
-    gap: 24px;
+    flex-direction: column;
+    gap: 72px;
+}
+
+@media only screen and (min-width: 768px) {
+    .section-one-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+    .section-one-list {
+        gap: 24px;
+  }
 }
 
 .section-one-list li {
-    flex-basis: calc(100% - (3 * 24px) / 4);
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+.section-one-list li {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+.section-one-list li {
+    flex-basis: calc((100% - 72px) / 4);
+  }
 }
 
 .section-one-icon {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     border: 1px solid #8e8f99;
@@ -233,22 +384,40 @@ span {
     margin-bottom: 8px;
 }
 
-.card-header {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
+@media only screen and (min-width: 1158px) {
+    .section-one-icon {
+        display: flex;
+  }
 }
 
-.card-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
+.section-one .card-header {
+    font-weight: 700;
+    font-size: 36px;
+    text-transform: capitalize;
 }
+
+@media only screen and (min-width: 768px) {
+.section-one .card-header {
+        text-align: left;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+.section-one .card-header {
+        font-weight: 500; 
+        font-size: 20px; 
+  }
+}
+
+.section-one .card-text {
+    font-weight: 500;
+}
+
+@media only screen and (min-width: 1158px) {
+.section-one .card-text {
+        font-weight: 400;
+    }
+} 
 
 /* #endregion */
 
@@ -256,8 +425,21 @@ span {
 
 .section-two {
     background-color:#f4f4fd;
-    padding: 120px 0;
+    padding: 98px 0;
 }
+
+@media only screen and (min-width: 768px) {
+.section-two {
+        padding: 96px 0;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+.section-two {
+        padding: 120px 0;
+    }
+}
+
 .section-header {
     font-weight: 700;
     font-size: 36px;
@@ -270,24 +452,50 @@ span {
 }
 .section-two-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: 72px;
     align-items: center;
-    gap: 24px;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 768px) {
+.section-two-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px 64px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+.section-two-list {
+        flex-wrap: nowrap;
+        gap: 24px;
+    }
 }
 
 .section-two .list-item {
+    width: 264px;
     background-color: #FFF;
     border-radius: 0 0 4px 4px;
-    width: calc((100% - 24px * 3) / 4);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
+
+@media only screen and (min-width: 768px) {
+.section-two .list-item {
+    flex-basis: calc((100% - 24px * 2) / 3);
+  }
+}
+
+@media only screen and (min-width: minwidthpx) {
+.section-two .list-item {
+        flex-basis: calc((100% - 24px * 3) / 4);
+  }
+}
+
 .section-two .card-caption {
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 0;
 }
-.section-two .card-header {
-    text-align: center;
-}
+
 .section-two .card-text {
     text-align: center;
     margin-bottom: 8px;
@@ -324,42 +532,83 @@ span {
 /* #region Portfolio */
 
 .section-three {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 98px 0;
+}
+
+@media only screen and (min-width: 768px) {
+    .section-three {
+        padding: 96px 0;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .section-three {
+        padding: 120px 0;
+    }
 }
 
 .section-three-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-    row-gap: 48px;
-    column-gap: 24px;
+    justify-content: center;
+    gap: 48px;
 }
-.section-three .card-caption {
-    border-bottom: 1px solid #e7e9fc;
-    border-left: 1px solid #e7e9fc;
-    border-right: 1px solid #e7e9fc;
-    padding: 32px 16px;
-    max-width: 360px;
-    height: 120px;
+
+@media only screen and (min-width: 768px) {
+.section-three-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        row-gap: 72px;
+        column-gap: 24px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .section-three-list {
+        row-gap: 48px;
+    }
 }
 
 .section-three .list-item {
-    width: calc((100% - 24px * 2) / 3);
+    width: 288px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+.section-three .list-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+.section-three .list-item {
+    flex-basis: calc((100% - 24px * 2) / 3);
+  }
 }
 
 .section-three .list-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-
 .image-box {
     overflow: hidden;
     position: relative;
-    width: 360px;
+    width: 288px;
+    height: 280px;
+}
+
+@media only screen and (min-width: 768px) {
+.image-box {
+    width: 356px;
     height: 300px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+    .image-box {
+        width: 360px;
+    }
 }
 
 .overlay-text {
@@ -383,6 +632,19 @@ span {
     transform: translateY(0);
 }
 
+.section-three .card-caption {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+    max-width: 360px;
+    height: 120px;
+}
+
+.section-three .card-header {
+    text-align: left;
+}
+
 /* #endregion */
 
 /* #region Footer */
@@ -392,13 +654,56 @@ span {
     padding: 100px 0;
 }
 
+@media only screen and (max-width: 767px) {
+.footer {
+        padding: 96px 0;
+    }
+}
+
 .footer .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 72px;
+    align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+.footer .container {
+    flex-direction: row;
+    column-gap: 24px;
+    row-gap: 72px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: baseline;
+  }
 }
+
+@media only screen and (min-width: 1158px) {
+    .footer .container {
+        gap: 0;
+    }
+}
+
 .footer-ad {
-    margin-right: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+@media only screen and (min-width: 768px) {
+    .footer-ad {
+        align-items: flex-start;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .footer-ad {
+        margin-right: 120px;
+    }
+}
+
 .logo-footer {
     display: inline-block;
     margin-bottom: 16px;
@@ -410,18 +715,20 @@ span {
     text-transform: uppercase;
     color: #4d5ae5;
 }
+
+
 .footer-text {
     color: #f4f4fd;
     line-height: 1.5;
+    font-size: 16px;
     letter-spacing: 0.02em;
-    width: 264px;
+    width: 288px;
 }
 
-.footer-socials {
-    display: flex;
-    justify-content: space-between;
-    gap: 16px;
-    margin-right: 80px;
+@media only screen and (min-width: 768px) {
+.footer-text {
+    width: 264px;
+  }
 }
 
 .footer-socials-text {
@@ -432,6 +739,25 @@ span {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .footer-socials-text {
+        text-align: left;
+    }
+}
+
+.footer-socials {
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 1158px) {
+   .social-networks {
+    margin-right: 80px;
+  }
 }
 
 .footer-socials-item {
@@ -459,11 +785,6 @@ span {
     background-color: #31D0AA;
 }
 
-.subscribe-form {
-    display: flex;
-    gap: 24px;
-}
-
 .footer-form-title {
     font-weight: 500;
     font-size: 16px;
@@ -471,10 +792,32 @@ span {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+.footer-form-title {
+    text-align: left;
+  }
+}
+
+.subscribe-form {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 768px) {
+.subscribe-form {
+    flex-direction: row;
+    gap: 24px;
+  }
 }
 
 .subscribe-input {
-    width: 264px;
+    width: 288px;
     height: 40px;
     border: 1px solid #fff;
     background-color: transparent;
@@ -488,6 +831,12 @@ span {
     color: #fff;
     font-family: "Roboto", sans-serif;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media only screen and (min-width: 768px) {
+.subscribe-input {
+    width: 264px;
+  }
 }
 
 .subscribe-input::placeholder {
@@ -513,10 +862,7 @@ span {
     letter-spacing: 0.04em;
     text-align: center;
     cursor: pointer;
-}
-
-.form-icon {
-    margin-left: 16px;
+    gap: 16px;
 }
 
 .subscribe-input:hover,
@@ -556,13 +902,20 @@ span {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px; 
     background-color: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
+}
+
+@media only screen and (min-width: 768px) {
+   .modal {
+        width: 408px;
+        min-height: 584px;
+  }
 }
 
 .modal-button {
@@ -633,13 +986,16 @@ span {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     background-color: transparent;
-    padding-left: 38px;
+    padding-left: 34px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 4px;
 }
 
-.modal-form input {
-    margin-bottom: 4px;
+@media only screen and (min-width: 1158px) {
+.form-input {
+    padding-left: 38px;
+  }
 }
 
 .input-wrapper {
