--- a/css/styles.css
+++ b/css/styles.css
@@ -739,25 +739,29 @@ address .contacts {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-    text-align: center;
+}
+
+.social-networks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
-    .footer-socials-text {
-        text-align: left;
+    .social-networks {
+        align-items: flex-start;
     }
-}
-
-.footer-socials {
-    display: flex;
-    gap: 16px;
-    justify-content: space-between;
 }
 
 @media only screen and (min-width: 1158px) {
    .social-networks {
     margin-right: 80px;
   }
+}
+.footer-socials {
+    display: flex;
+    gap: 16px;
 }
 
 .footer-socials-item {
