--- a/css/styles.css
+++ b/css/styles.css
@@ -1138,13 +1138,29 @@ address .contacts {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-close-icon {}
+.mobile-menu-close:hover,
+.mobile-menu-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.mobile-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-close:hover .mobile-close-icon,
+.mobile-menu-close:focus .mobile-close-icon {
+    fill: #fff;
+}
+
 
 .mobile-menu-list {
     margin-bottom: auto;
-}
+} 
 
 .mobile-menu-item:not(:last-child) {
     margin-bottom: 40px;
@@ -1157,13 +1173,20 @@ address .contacts {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-link:hover,
+.mobile-menu-link:focus {
+    color: #404bbf;
 }
 
 .mobile-menu-address {
     margin-bottom: 48px;
 }
 
-.mobile-menu-contacts {}
+.mobile-menu-contacts {
+}
 
 .mobile-contacts-item:not(:last-child) {
     margin-bottom: 24px;
@@ -1175,9 +1198,19 @@ address .contacts {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-contacts-link:hover,
+.mobile-contacts-link:focus {
+    color: #404bbf;
 }
 
 .mobile-socials-list {
     gap: 40px;
+}
+.socials-background:hover,
+.socials-background:focus {
+    background-color: #404BBF;
 }
 /* #endregion */
