--- a/css/styles.css
+++ b/css/styles.css
@@ -684,6 +684,7 @@ address .contacts {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: baseline;
+    padding-left: 108px;
   }
 }
 
