--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ address .contacts {
 @media only screen and (min-width: 1158px) {
     .footer .container {
         gap: 0;
+        padding-left: 0;
     }
 }
 
@@ -900,8 +901,8 @@ address .contacts {
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    /* opacity: 0;
-    pointer-events: none;  */
+    opacity: 0;
+    pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
