--- a/css/styles.css
+++ b/css/styles.css
@@ -691,7 +691,7 @@ address .contacts {
 @media only screen and (min-width: 1158px) {
     .footer .container {
         gap: 0;
-        padding-left: 0;
+        padding-left: 15px;
     }
 }
 
